# computer-vision-gesture-recognition

./: .gitignore  README.md  collect_landmark_data.py  gesture_recognition.py  lenet5.py  pyproject.toml  train_model.py
