[project]
name = "computer-vision-for-gesture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "numpy>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
